refactor(api): hide constructors, introduce Csvs class, and consolidate tests
BREAKING CHANGE: Csv and Row constructors are now private. Users must migrate to factory methods Csv.of() / Row.of() and I/O utility Csvs.from(). SkCsvRecords is replaced by Csvs.